Cambios finales y de configuracion automática de turno.